--- a/index.ipynb
+++ b/index.ipynb
@@ -1184,7 +1184,7 @@
    "source": [
     "import math\n",
     "def distance(first_neighbor, second_neighbor):\n",
-    "    return (distance_between_neighbors_squared(first_neighbor, second_neighbor))**1/4"
+    "    return (distance_between_neighbors_squared(first_neighbor, second_neighbor)"
    ]
   },
   {
