Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1271,13 +1271,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    return neighbor['name'==first_neighbor]"
+    "    return neighbor[0]"
    ]
   },
   {
