--- a/index.ipynb
+++ b/index.ipynb
@@ -1271,28 +1271,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    second_neighbor[\"distance\"]=distance(first_neighbor, second_neighbor)\n",
-    "    return second_neighbo"
+    "    return second_neighbor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Fred'"
+       "{'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
