--- a/index.ipynb
+++ b/index.ipynb
@@ -1318,7 +1318,7 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    distance_list=list(map(lambda ))"
+    "    distance_list=list(map(lambda x:dista))"
    ]
   },
   {
