--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1311,35 +1311,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    return list(map(lambda x: distance(first_neighbor,x),neighbors))"
+    "    distance_list=list(map(lambda x: distance(first_neighbor,x),neighbors))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.0,\n",
-       " 4.242640687119285,\n",
-       " 1.0,\n",
-       " 5.385164807134504,\n",
-       " 2.23606797749979,\n",
-       " 4.123105625617661]"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "distance_all(fred, neighbors)\n",
     "\n",
