--- a/index.ipynb
+++ b/index.ipynb
@@ -86,6 +86,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neighobrs"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
