Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1321,6 +1321,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def distance_all(first_neighbor, neighbors):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
    "outputs": [
