--- a/index.ipynb
+++ b/index.ipynb
@@ -1326,7 +1326,7 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    "
+    "    return list(map(lambda x: nei,neighbors))"
    ]
   },
   {
