Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1321,31 +1321,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    return list(map(lambda x: neighbor,neighbors))"
+    "    return list(map(lambda x: x,neighbors))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.0,\n",
-       " 4.242640687119285,\n",
-       " 1.0,\n",
-       " 5.385164807134504,\n",
-       " 2.23606797749979,\n",
-       " 4.123105625617661]"
+       "[{'name': 'Fred', 'avenue': 4, 'street': 8},\n",
+       " {'name': 'Suzie', 'avenue': 1, 'street': 11},\n",
+       " {'name': 'Bob', 'avenue': 5, 'street': 8},\n",
+       " {'name': 'Edgar', 'avenue': 6, 'street': 13},\n",
+       " {'name': 'Steven', 'avenue': 3, 'street': 6},\n",
+       " {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
