--- a/index.ipynb
+++ b/index.ipynb
@@ -1271,19 +1271,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    second_neighbor[\"distance\"]=distance(first_neighbor, second_neighbor)\n",
-    "    return second_neighbor"
+    "    neighbor_with_distance = second_neighbor.copy()\n",
+    "    distance = math.sqrt(distance_between_neighbors_squared(first_neighbor, second_neighbor))\n",
+    "    neighbor_with_distance['distance'] = distance\n",
+    "    return neighbor_with_distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1294,7 @@
        "{'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
