Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1344,10 +1344,10 @@
        " {'name': 'Bob', 'avenue': 5, 'street': 8},\n",
        " {'name': 'Edgar', 'avenue': 6, 'street': 13},\n",
        " {'name': 'Steven', 'avenue': 3, 'street': 6},\n",
-       " {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}]"
+       " {'name': 'Natalie', 'avenue': 5, 'street': 4}]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
