Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1313,12 +1313,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    return list(map(lambda x: distance(first_neighbor,x),neighbors))"
+    "    return list(map(lambda x: distance_with_neighbor(first_neighbor,x),neighbors))"
    ]
   },
   {
