Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1318,7 +1318,7 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    return list(map(lambda x: distance_with_neighbor(first_neighbor,x),neighbors))"
+    "    return list(filter(lambda x: distance_with_neighbor(first_neighbor,x),neighbors))"
    ]
   },
   {
