--- a/index.ipynb
+++ b/index.ipynb
@@ -1319,7 +1319,7 @@
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    distance_list=list(map(lambda x: distance_with_neighbor(first_neighbor,x),neighbors))\n",
-    "    return list(filter(lambda x: ))"
+    "    return list(filter(lambda x: ()))"
    ]
   },
   {
