Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1313,13 +1313,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-87-44477a751962>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-87-44477a751962>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return list(filter(lambda x: (distance_with_neighbor(first_neighbor,x).distance=! 0.0),distance_list))\u001b[0m\n\u001b[0m                                                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    distance_list=list(map(lambda x: distance_with_neighbor(first_neighbor,x),neighbors))\n",
-    "    return list(filter(lambda x: (distance_with_neighbor(first_neighbor,x).distance=! 0.0),))"
+    "    return list(filter(lambda x: (distance_with_neighbor(first_neighbor,x).distance=! 0.0),distance_list))"
    ]
   },
   {
